# mdtoc

./: Cargo.toml  README.md  sample_edited.md
.circleci/: config.yml
examples/: sample.md  sample_injecting_token.md
scripts/: bin_sign.sh  ci.sh  gh_release.sh  install_rust.sh  test.sh
src/: analyze.rs  args.rs  lib.rs  main.rs  table_of_contents.rs  transform.rs  write.rs
