[package]
authors = ["Maks Yadvinskyy <maks@revent.studio>"]
edition = "2021"
name = "mdtoc"
publish = false
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.10", features = ["derive"]}
crossbeam = "0.8.2"
regex = "1.6.0"
